# readpassphrase-3

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-ISC  LICENSE-MIT  README.md  build.rs  cliff.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yaml
c_lib/: readpassphrase.c
csrc/: read-password-w32.c
examples/: echo_passphrase.rs  inplace.rs  owned.rs  pass.rs
src/: lib.rs
