[package]
name = "readpassphrase-3"
version = "2.0.0"
categories = ["command-line-interface"]
documentation = "https://docs.rs/readpassphrase-3"
edition = "2024"
keywords = ["read", "password", "getpass", "passphrase", "tty"]
license = "MIT OR Apache-2.0 OR ISC"
readme = "README.md"
repository = "https://github.com/mrdomino/readpassphrase-3"
rust-version = "1.85.0"
description = "Simple wrapper around readpassphrase(3)"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
]

[[example]]
name = "pass"
path = "examples/pass.rs"
doc-scrape-examples = true

[[example]]
name = "inplace"
path = "examples/inplace.rs"

[[example]]
name = "owned"
path = "examples/owned.rs"

# See README.md for description of features.
[features]
default = ["libbsd-static", "windows-vendored"]
external = []
libbsd = ["dep:libbsd-sys"]
libbsd-static = ["libbsd", "libbsd-sys/static"]
windows-vendored = ["dep:cc"]
zeroize = ["dep:zeroize"]

[dependencies]
bitflags = "2"
libbsd-sys = { version = "0.1", optional = true }
zeroize = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
zeroize = "1"

[package.metadata.docs.rs]
features = ["external", "zeroize"]
no-default-features = true
