[package]
name = "readpassphrase-3"
version = "1.0.2"
categories = ["command-line-interface"]
documentation = "https://docs.rs/readpassphrase-3"
edition = "2024"
keywords = ["read", "password", "getpass", "passphrase", "tty"]
license = "MIT OR Apache-2.0 OR ISC"
readme = "README.md"
repository = "https://github.com/mrdomino/readpassphrase-3"
rust-version = "1.85.0"
description = "Simple wrapper around readpassphrase(3)"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
]

[[example]]
name = "pass"
path = "examples/pass.rs"
doc-scrape-examples = true

[[example]]
name = "inplace"
path = "examples/inplace.rs"

[[example]]
name = "owned"
path = "examples/owned.rs"

[features]
default = ["linux-vendored", "windows-vendored"]
external = []
libbsd = ["dep:libbsd-sys"]
libbsd-static = ["libbsd", "libbsd-sys/static"]
linux-vendored = ["dep:tcm-readpassphrase-vendored"]
windows-vendored = ["dep:cc"]
zeroize = ["dep:zeroize"]

[dependencies]
bitflags = "2"
zeroize = { version = "1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libbsd-sys = { version = "0.1.3", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
tcm-readpassphrase-vendored = { version = "0.2", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
zeroize = "1"

[package.metadata.docs.rs]
features = ["external", "zeroize"]
# XXX cc is crashing on mac and windows on docs.rs
no-default-features = true
