[package]
name = "readpassphrase-3"
version = "2.0.0-pre.0"
categories = ["command-line-interface"]
documentation = "https://docs.rs/readpassphrase-3"
edition = "2024"
keywords = ["read", "password", "getpass", "passphrase", "tty"]
license = "MIT OR Apache-2.0 OR ISC"
readme = "README.md"
repository = "https://github.com/mrdomino/readpassphrase-3"
rust-version = "1.85.0"
description = "Simple wrapper around readpassphrase(3)"

exclude = [
    ".githook/*",
    ".github/**",
    ".gitignore",
]

[[example]]
name = "pass"
path = "examples/pass.rs"
doc-scrape-examples = true

[[example]]
name = "inplace"
path = "examples/inplace.rs"

[[example]]
name = "owned"
path = "examples/owned.rs"

[features]
default = ["libbsd-static"]
libbsd-static = ["libbsd-sys/static"]
zeroize = ["dep:zeroize"]

[dependencies]
bitflags = "2"
zeroize = { version = "1", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
libbsd-sys = "=0.2.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
cc = "1"

[dev-dependencies]
zeroize = "1"

[package.metadata.docs.rs]
features = ["zeroize"]
default-features = false
